// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders a string with a link with arbitrary attributes 1`] = `
<DocumentFragment>
  A link 
  <a
    class="button"
    href="http://something1"
    target="_blank"
  >
    in the
  </a>
   middle
</DocumentFragment>
`;

exports[`Renders a string with a working onClick callback 1`] = `
<DocumentFragment>
  A link 
  <a
    class="button"
    href="http://something1"
    target="_blank"
  >
    in the
  </a>
   middle
</DocumentFragment>
`;

exports[`Renders a string with multiple links in it 1`] = `
<DocumentFragment>
  A link 
  <a
    href="http://something1"
  >
    in the
  </a>
   middle and one 
  <a
    href="http://something2"
  >
    in the end
  </a>
</DocumentFragment>
`;

exports[`Renders a string with no links in it 1`] = `
<DocumentFragment>
  No links in the string
</DocumentFragment>
`;

exports[`Renders a string with one link in the middle 1`] = `
<DocumentFragment>
  A link 
  <a
    href="http://something"
  >
    in the
  </a>
   middle
</DocumentFragment>
`;

exports[`Renders nothing when the string is not there 1`] = `
<DocumentFragment>
  <span />
</DocumentFragment>
`;
